<resources>
    <string name="app_name">Warehouse</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="product_name">Product Name</string>
    <string name="product_not_found">Product Not Found</string>
    <string name="exp_date">Expiration Date</string>
    <string name="amount">Amount</string>
    <string name="amount_with_number">Amount: %1$s</string>
    <string name="box">Box</string>
    <string name="box_with_number">Box: %1$s</string>
    <string name="error_field_required">This field is required</string>
    <string name="invalidDate">Invalid Date</string>
    <string name="item_details_title">Item Details</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for Items</string>
    <string name="search_results">Search Results</string>
    <string name="message">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="product_description">Product Description</string>
    <string name="flashlight">Flashlight</string>
    <string name="barcode_image">Barcode Image</string>
    <string name="sort_by">Sort By</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="sort">Sort</string>
    <string name="channel_name">Expired Items</string>
    <string name="channel_description">Receive notifications for items that are expired.</string>
    <string name="hints">Hints</string>
    <string name="date_hint">By pressing the icon i it opens the date selection dialog.</string>
    <string name="amount_hint">By pressing the icon i or i you can decrease and increase the amount of the item. </string>
    <string name="barcode_hint">By pressing the icon i you can scan a bar code and find the product name automatically.</string>
    <string name="add_new">Add New Item</string>
    <string name="new_item">New Item</string>
    <string name="empty_results">Nothing found</string>
    <string name="delete_item_title">Delete item?</string>
    <string name="delete_item_supporting_text">If you delete the item you will not be able to recover it.</string>
    <string name="chip_box_1">Box 1</string>
    <string name="chip_box_2">Box 2</string>
    <string name="chip_box_3">Box 3</string>
    <string name="chip_box_4">Box 4</string>
    <string name="_date_helper_text">Date format is YYYY-MM-DD or YYYY-MM</string>
    <string name="new_version">"    New version is available and is downloading on the background."</string>
    <string name="permission_title">Permission Required</string>
    <string name="dismiss">Dismiss</string>
    <string name="permission_description">Write to external storage is required in order to download the new app version apk file.</string>
</resources>
